ref: refactor custom rule