@@ -5,14 +5,13 @@ import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
 import org.sonar.plugins.java.api.tree.CatchTree;
 import org.sonar.plugins.java.api.tree.Tree;
 
-import java.util.Collections;
 import java.util.List;
 
 @Rule(key = "empty-catch-block")
 public class EmptyCatchBlockRule extends IssuableSubscriptionVisitor {
     @Override
     public List<Tree.Kind> nodesToVisit() {
-        return Collections.singletonList(Tree.Kind.CATCH);
+        return List.of(Tree.Kind.CATCH);
     }
 
     @Override
@@ -22,7 +21,7 @@ public class EmptyCatchBlockRule extends IssuableSubscriptionVisitor {
         if (catchTree.block().body().isEmpty()) {
             reportIssue(
                     catchTree.catchKeyword(),
-                    "Empty catch block detected. Exception should not be silently ignored."
+                    "Empty catch blocks silently discard exceptions. Handle, rethrow, or document why ignoring is safe."
             );
         }
     }
