@@ -2,57 +2,98 @@ package com.vini.sonarqube.rules;
 
 import org.sonar.check.Rule;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
+import org.sonar.plugins.java.api.tree.AssignmentExpressionTree;
 import org.sonar.plugins.java.api.tree.ExpressionTree;
+import org.sonar.plugins.java.api.tree.IdentifierTree;
+import org.sonar.plugins.java.api.tree.MemberSelectExpressionTree;
 import org.sonar.plugins.java.api.tree.Tree;
 import org.sonar.plugins.java.api.tree.VariableTree;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 @Rule(key = "hardcoded-credential")
 public class HardCodeCredentialRule extends IssuableSubscriptionVisitor {
 
-    private static final List<String> CREDENTIAL_KEYWORDS = Arrays.asList(
+    private static final Set<String> CREDENTIAL_KEYWORDS = Set.of(
             "password", "passwd", "pwd",
             "secret", "token", "tkn",
             "apikey", "api_key",
-            "accesskey", "access_key"
+            "accesskey", "access_key",
+            "clientsecret", "client_secret",
+            "privatekey", "private_key"
     );
 
     @Override
     public List<Tree.Kind> nodesToVisit() {
-        return Collections.singletonList(Tree.Kind.VARIABLE);
+        return List.of(Tree.Kind.VARIABLE, Tree.Kind.ASSIGNMENT);
     }
 
     @Override
     public void visitNode(Tree tree) {
-        VariableTree variableTree = (VariableTree) tree;
+        if (tree.is(Tree.Kind.VARIABLE)) {
+            checkVariable((VariableTree) tree);
+            return;
+        }
 
-        if (variableTree.type() == null ||
-                !"String".equals(variableTree.type().symbolType().name())
-        ) {
+        checkAssignment((AssignmentExpressionTree) tree);
+    }
+
+    private void checkVariable(VariableTree variableTree) {
+        if (!isSensitiveName(variableTree.simpleName().name())) {
             return;
         }
 
         ExpressionTree initializer = variableTree.initializer();
-        if (initializer == null) {
+        if (!isStringLiteral(initializer)) {
             return;
         }
 
-        if (!initializer.is(Tree.Kind.STRING_LITERAL)){
+        reportIssue(
+                variableTree.simpleName(),
+                "Hard-coded credential detected. Load secrets from configuration or a secret manager instead."
+        );
+    }
+
+    private void checkAssignment(AssignmentExpressionTree assignmentTree) {
+        if (!isStringLiteral(assignmentTree.expression())) {
             return;
         }
 
-        String variableName = variableTree.simpleName().name().toLowerCase();
-
-        boolean isCredential = CREDENTIAL_KEYWORDS.stream()
-                .anyMatch(variableName::contains);
-
-        if (isCredential) {
-            reportIssue(variableTree.simpleName(),
-                    "Hard-coded credential detected. Avoid embedding secrets directly in source code.");
+        String targetName = extractTargetName(assignmentTree.variable());
+        if (targetName == null || !isSensitiveName(targetName)) {
+            return;
         }
+
+        reportIssue(
+                assignmentTree.variable(),
+                "Hard-coded credential detected. Load secrets from configuration or a secret manager instead."
+        );
+    }
+
+    private boolean isStringLiteral(ExpressionTree expressionTree) {
+        if (expressionTree == null) {
+            return false;
+        }
+
+        return expressionTree.is(Tree.Kind.STRING_LITERAL) || expressionTree.is(Tree.Kind.TEXT_BLOCK);
+    }
+
+    private boolean isSensitiveName(String variableName) {
+        String normalizedName = variableName.toLowerCase();
+        return CREDENTIAL_KEYWORDS.stream().anyMatch(normalizedName::contains);
+    }
+
+    private String extractTargetName(ExpressionTree expressionTree) {
+        if (expressionTree instanceof IdentifierTree identifierTree) {
+            return identifierTree.name();
+        }
+
+        if (expressionTree instanceof MemberSelectExpressionTree memberSelectExpressionTree) {
+            return memberSelectExpressionTree.identifier().name();
+        }
+
+        return null;
     }
 
 }
